# desdeo-problem

./: .gitignore  LICENSE  MOP5.html  Objective.py  Problem.py  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
.github/properties/: DESDEO_package.properties.json
.github/workflows/: DESDEO-package.yml  DESDEO-problem.yml  DESDEO_package.yml  Lint.yml  automate-DESDEO-problem.yml  automate_tests.yml  test.yml
desdeo_problem/: Constraint.py  Objective.py  Problem.py  Variable.py  __init__.py  logger.cfg
desdeo_problem/problem/: Constraint.py  Objective.py  Problem.py  Variable.py  __init__.py  analytical_problem.json  mop5.json  mop7.json  mop_example.json  real_example21.json  real_example22.json  real_example23.json  real_example24.json  test.py  test_emo.py
desdeo_problem/surrogatemodels/: SurrogateModels.py  __init__.py  lipschitzian.py
desdeo_problem/testproblems/: CarCrash.py  CarSideImpact.py  DBMOPP.py  DistanceProblem.py  EngineeringRealWorld.py  GAA.py  ListProblems.py  MultipleClutchBrakes.py  README.md  Region.py  RiverPollution.py  RiverPollution4.py  RiverPollution5.py  TestProblems.py  VehicleCrashworthiness.py  __init__.py  aaa.py  utilities.py
desdeo_problem/utilities/: MathParser.py  __init__.py
docs/: 404.rst  api.rst  conf.py  examples.rst  index.rst  problems.rst  surrogates.rst
docs/_static/: style.css
docs/_templates/: layout.html
docs/notebooks/: Benchmark_problems.ipynb  (+7 more)
examples/: 1 Defining a problem.ipynb  2 Defining a data based problem.ipynb  3 Benchmark Problems.ipynb  Analytical Problem.py  AnalyticalProblem.py  Data-Problems.ipynb  Lipschitzian Modelling.ipynb  Test-Notebook.ipynb  Test-Notebook.py  analytical_problem.ipynb  data_problem.ipynb  mixed_problem.ipynb  mixed_problem.py  test_problem.py  test_problems.ipynb  testnotebook.ipynb
problem/: Objective.py  Problem.py  Variable.py  __init__.py
surrogatemodels/: SurrogateModels.py
testproblems/: TestProblems.py  __init__.py
tests/: test_Constraint.py  test_DBMOPP_generator.py  test_MathJsonMOProblem.py  test_TestProblems.py  test_car_crash.py  test_car_side_impact.py  test_dummy.py  test_eng_re21.py  test_engineering_real_world.py  test_gaa.py  test_multiple_clutch_brakes.py  test_river.py
(+85 files in other folders)
