[tool.poetry]
name = "desdeo_problem"
version = "0.14.0"
description = "This package contains the problem classes for desdeo framework."
authors = ["Bhupinder Saini <bhupinder.s.saini@jyu.fi>", "Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
optproblems = "^1.2"
diversipy = "^0.8.0"
pandas = "^0.25.1"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
jupyter = "^1.0"
matplotlib = "^3.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
